<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dpparking.androidapp.peo.SearchActivity"
    android:background="@drawable/gradient_body_background"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_search_by"
            android:id="@+id/textViewSearchBy"
            style="@style/labelStyle"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerSearchBy"
            android:entries="@array/search_by_options_array"
            style="@style/labelStyle"
            />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextSearchString"
        android:layout_gravity="center_vertical"
        android:hint="@string/title_search_hint"
        android:singleLine="true"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_booking_type"
        android:id="@+id/textViewBookingType"
        style="@style/labelStyle"
        android:paddingTop="4dp"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroupBookingType"

        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_normal_booking"
            android:id="@+id/radioButtonNormal"
            android:checked="true"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_gc_booking"
            android:id="@+id/radioButtonGC" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_both"
            android:id="@+id/radioButtonBoth" />

        </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_elapsed_by"
        android:id="@+id/textViewElapsedBy"
        style="@style/labelStyle"
        android:paddingTop="4dp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroupElapsedBy"

        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_2hrs"
            android:id="@+id/radioButtonTwoHours"
            android:checked="true"
            android:layout_weight=".2"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_4hrs"
            android:id="@+id/radioButtonFourHours"
            android:layout_weight=".2"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_8hrs"
            android:id="@+id/radioButtonEightHours"
            android:layout_weight=".6"/>

    </RadioGroup>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_search"
        android:id="@+id/buttonSearch"
        android:layout_gravity="center_vertical"
        style="@style/buttonStyle"
        android:layout_marginTop="4dp"
        />


</LinearLayout>
