<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dpparking.androidapp.peo.TicketDetailActivity"
    android:orientation="vertical"
    android:background="@color/appBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_corner"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_booking_id"
                android:id="@+id/textViewBookingId"
                android:textColor="@color/color_light_grey"
                android:gravity="left"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:layout_weight=".5"
                android:textStyle="italic|bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_remaining_time"
                android:id="@+id/textViewRemainingTime"
                android:textColor="@color/color_light_grey"
                android:layout_weight=".5"
                android:textSize="24sp"
                android:gravity="right"
                />

            </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_vehicle_no"
            android:id="@+id/textViewVehicle"
            android:textColor="@color/color_light_grey"
            android:gravity="left"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_weight=".33"
        />





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_parking_area_code"
            android:id="@+id/textViewParkingAreaCode"
            android:textColor="@color/color_light_grey"
            android:gravity="right"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_weight=".33"
        />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_from_time"
            android:id="@+id/textViewStart"
            android:textColor="@color/color_light_grey"
            android:layout_weight=".2"
            android:textSize="16sp"
            android:gravity="left"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_to_time"
            android:id="@+id/textViewEnd"
            android:textColor="@color/color_light_grey"
            android:layout_weight=".2"
            android:gravity="right"
            android:textSize="16sp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




    </LinearLayout>
    </LinearLayout>
</LinearLayout>
